--- a/GameF/gamePageF.html
+++ b/GameF/gamePageF.html
@@ -51,7 +51,7 @@
         <div class="button">
             <div class="kproj"><a href="./index.html">Watch
                     Project</a></div>
-            <div class="kproj"><a href="../GameF" download>Download Project</a></div>
+            <div class="kproj"><a href="../GameF/Fzip.zip" download>Download Project</a></div>
         </div>
     </header>
 
