--- a/MyPersonalPortfolio.html
+++ b/MyPersonalPortfolio.html
@@ -216,7 +216,7 @@
                     <button><a href="./GameB/gamePageB.html">Play</a>
                     </button>
                 </div>
-                <div class="gameimg"><img src="/GameB/imges/Xo2.jpg" alt="">
+                <div class="gameimg"><img src="./GameB/imges/Xo2.jpg" alt="">
                 </div>
                 <div class="inGame">
                     <p>X|O Game</p>
