--- a/MyPersonalPortfolio.html
+++ b/MyPersonalPortfolio.html
@@ -359,7 +359,7 @@
                 <input type="text"><br>
                 <label for="">Texst</label><br>
                 <Textarea></Textarea><br>
-                <input type="button" value="Send">
+                <input type="button" value="Send" id="sendBtn">
             </form>
             <img src="images/Rectangle 41@2x.png" alt="">
         </div>
